Cambio para que diga resolucion

--- a/TP1 - Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA (1).ipynb
+++ b/TP1 - Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA (1).ipynb
@@ -577,7 +577,7 @@
     }
    ],
    "source": [
-    "# Resolver acá\n",
+    "# Resolver acá\nresolución",
     "def suma(*parametros):\n",
     "    resultado = sum(parametros)\n",
     "    return resultado\n",
