Revert "Cambio para que diga resolucion"
This reverts commit b96b0b92d09f3e1162c4bbfc10bea0c681b9df9f.

--- a/TP1 - Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA (1).ipynb
+++ b/TP1 - Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA (1).ipynb
@@ -577,7 +577,7 @@
     }
    ],
    "source": [
-    "# Resolver acá\nresolución",
+    "# Resolver acá\n",
     "def suma(*parametros):\n",
     "    resultado = sum(parametros)\n",
     "    return resultado\n",
