--- a/tp1/Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA.ipynb
+++ b/tp1/Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA.ipynb
@@ -11,6 +11,7 @@
    },
    "source": [
     "# Curso de Big Data. Otoño 2024\n",
+    "### MOROZUMI _ DE LEÓN _ DI COSTANZO PEREIRA\n",
     "\n",
     "## Trabajo Práctico 1 - Parte 1 "
    ]
