--- a/tp1/Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA.ipynb
+++ b/tp1/Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "# Caso A \n",
     "import math \n",
-    "#importamos el módulo\n",
+    "#importamos el módulo math\n",
     "print('la tangente de 1 es', math.tan(1)\n",
     ")\n",
     "#usamos la función .tan. No guardamos la variable solo imprimimos la tangente de 1.\n",
