Entrega final del tp

--- a/tp1/Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA.ipynb
+++ b/tp1/Parte 1_MOROZUMI_DELEON_DICOSTANZOPEREIRA.ipynb
@@ -262,10 +262,10 @@
    "source": [
     "# Resolver acá\n",
     "def añobiciesto(año):\n",
-    "    if (año % 400 == 0) or ((año % 4 == 0) and (año % 100 != 0)):\n",
-    "        return ('el año es biciesto')\n",
+    "    if (año % 400 == 0) or ((año % 4 == 0) and (año % 100 != 0)): #ponemos las condiciones \n",
+    "        return ('el año es biciesto') #lo que debe devolver la función\n",
     "    else:\n",
-    "        return ('el año no es biciesto')\n",
+    "        return ('el año no es biciesto') #lo que debe devolver la función en caso que no cumpla las condiciones\n",
     "\n",
     "#probamos la función\n",
     "\n",
@@ -328,9 +328,9 @@
    ],
    "source": [
     "# Resolver acá\n",
-    "for elemento in mi_lista:\n",
-    "    tipo = type(elemento).__name__\n",
-    "    print(f\"el {elemento} es un {tipo}\")"
+    "for elemento in mi_lista: #iterar por la cantidad de elementos en la lista.\n",
+    "    tipo = type(elemento).__name__ #usamos la función .type y .__name__ para solo quedarnos con el tipo de dato en un string.\n",
+    "    print(f\"el {elemento} es un {tipo}\") #usamos un fstring para que imprima en pantalla el tipo de dato u objeto que hay en cada caso"
    ]
   },
   {
@@ -365,13 +365,14 @@
    ],
    "source": [
     "# Resolver acá\n",
-    "nueva_lista = ['universidad', 'Big', 'Data', 'San', 18, 'Andrés']\n",
+    "nueva_lista = ['universidad', 'Big', 'Data', 'San', 18, 'Andrés'] #definimos una nueva lista\n",
     "\n",
-    "for elemento in nueva_lista:\n",
-    "    if isinstance(elemento, str):\n",
-    "        print(elemento , len(elemento))\n",
+    "for elemento in nueva_lista: #iteramos por la cantidad de elementos en la nueva lista\n",
+    "    if isinstance(elemento, str): #si el elemento es un string isinstance devuelve True, entonces estamos en la situación if True \n",
+    "        print(elemento , len(elemento)) # if True printea el elemento y la cantidad de caracteres.\n",
     "    else:\n",
-    "        print(f\"Elemento no es un string: {elemento} | {type(elemento).__name__}\")\n"
+    "        print(f\"Elemento no es un string: {elemento} | {type(elemento).__name__}\") # si no es un String printea que el elemento no es un string y el tipo de elemento que es\n",
+    "        #usamos un f string porque así es más sencillo que imprima las variables solo ponemos {}\n"
    ]
   },
   {
@@ -448,20 +449,20 @@
     }
    ],
    "source": [
-    "# Resolver acá\n",
-    "provincia_mayor_sobrerepresentacion = argentina\n",
-    "mayor_sobrerepresentacion = 0\n",
+    "# Inicialización de variables\n",
+    "provincia_mayor_sobrerepresentacion = 'argentina'  # Inicialmente se asume que la provincia con mayor sobrerepresentación es 'argentina'\n",
+    "mayor_sobrerepresentacion = 0  # Se inicializa el valor de la mayor sobrerepresentación en 0\n",
     "\n",
-    "# Iteramos sobre el diccionario\n",
+    "# Iteramos sobre el diccionario 'dict_provincias', suponiendo que existe y contiene información sobre representación de provincias\n",
     "for provincia, representacion in dict_provincias.items():\n",
-    "    if representacion < argentina:\n",
+    "    if representacion < argentina:  # Si la representación de la provincia es menor que la representación de Argentina\n",
     "        print(f\"{provincia} está sobrerepresentada.\")\n",
-    "        if representacion > mayor_sobrerepresentacion: \n",
-    "            mayor_sobrerepresentacion = representacion\n",
-    "            provincia_mayor_sobrerepresentacion = provincia\n",
-    "    elif representacion > argentina:\n",
+    "        if representacion > mayor_sobrerepresentacion:  # Si la representación actual es mayor que la mayor sobrerepresentación registrada hasta el momento\n",
+    "            mayor_sobrerepresentacion = representacion  # Actualizamos el valor de la mayor sobrerepresentación\n",
+    "            provincia_mayor_sobrerepresentacion = provincia  # Actualizamos la provincia con mayor sobrerepresentación\n",
+    "    elif representacion > argentina:  # Si la representación de la provincia es mayor que la representación de Argentina\n",
     "        print(f\"{provincia} está subrepresentada.\")\n",
-    "    else:\n",
+    "    else:  # Si la representación de la provincia es igual a la representación de Argentina\n",
     "        print(f\"{provincia} tiene una representación proporcional.\")\n",
     "\n",
     "# Imprimimos la provincia con mayor sobrerepresentación\n",
@@ -542,9 +543,11 @@
    ],
    "source": [
     "# Resolver acá\n",
-    "while poblacion2010_pba/representantes_pba > argentina:\n",
-    "    representantes_pba += 1\n",
-    "    print(f\"Se agregó un representante, el total ahora es {representantes_pba}\")\n"
+    "\n",
+    "# Usamos un bucle while que se ejecut mientras la proporción de población de la provincia de Buenos Aires con respecto a la cantidad de representantes de esa provincia sea mayor que la representación a nivel nacional, cuando deja de ser mayyor el bucle termina.\n",
+    "while poblacion2010_pba / representantes_pba > argentina:\n",
+    "    representantes_pba += 1  # Se incrementa en uno la cantidad de representantes de la provincia de Buenos Aires\n",
+    "    print(f\"Se agregó un representante, el total ahora es {representantes_pba}\")  # Se imprime un mensaje indicando la adición de un representante\n"
    ]
   },
   {
@@ -563,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -572,18 +575,25 @@
        "13"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Resolver acá\n",
-    "def suma(*parametros):\n",
-    "    resultado = sum(parametros)\n",
-    "    return resultado\n",
-    "suma(1, 4, 8, \n",
-    "    )"
+    "def suma(*parametros): #El asterisco (*) antes de 'parametros' indica que la función acepta un número variable de argumentos.\n",
+    "    '''\n",
+    "    Función que suma todos los argumentos recibidos.\n",
+    "    \n",
+    "    Args: *parametros: Argumentos variables que se sumarán.\n",
+    "    \n",
+    "    Returns: La suma de todos los argumentos.\n",
+    "\n",
+    "    '''\n",
+    "    resultado = sum(parametros) # Se calcula la suma de todos los argumentos usando la función sum()\n",
+    "    return resultado  # Se devuelve el resultado de la suma\n",
+    "suma(1, 4, 8) # Llamada a la función suma con múltiples argumentos."
    ]
   },
   {
