Entrega final del tp

--- a/TP1 - Parte 2_Consignas.ipynb
+++ b/TP1 - Parte 2_Consignas.ipynb
@@ -11,6 +11,8 @@
    },
    "source": [
     "# Curso de Big Data. Otoño 2024\n",
+    "### MOROZUMI _ DE LEÓN _ DI COSTANZO PEREIRA\n",
+    "\n",
     "\n",
     "## Trabajo Práctico 1 - Parte 2"
    ]
@@ -103,7 +105,7 @@
    ],
    "source": [
     "buscar = \"whey protein\"\n",
-    "url =\"https://api.mercadolibre.com/sites/{}/search?q={}\".format(\"MLA\", buscar.replace(\" \", \"%20\"))\n",
+    "url = \"https://api.mercadolibre.com/sites/{}/search?q={}\".format(\"MLA\", buscar.replace(\" \", \"%20\"))\n",
     "\n",
     "response = requests.request(\"GET\",url)\n",
     "print (response)\n",
@@ -10022,7 +10024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
