Comentada la matriz

--- a/tp2/Parte 2 .ipynb
+++ b/tp2/Parte 2 .ipynb
@@ -130,7 +130,9 @@
    "id": "179e1d6a-d1fc-497d-8ce5-5e924a007c55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Podemos notar que los cuadros entre los que se muestra una mayor correlación son los de: number_of_reviews y reviews_per_month"
+   ]
   }
  ],
  "metadata": {
