--- a/tp2/Parte_1.ipynb
+++ b/tp2/Parte_1.ipynb
@@ -59,7 +59,7 @@
     "# Mostrar los primeros registros del DataFrame\n",
     "print(df.head())\n",
     "\n",
-    "#Pongo el número de filas para mas tarde ver algo importante:\n",
+    "#Guardo el número de filas en una variable:\n",
     "num_filas_antes = len(df)"
    ]
   },
