--- a/tp2/Parte_1_arreglada.ipynb
+++ b/tp2/Parte_1_arreglada.ipynb
@@ -56,7 +56,8 @@
     "directorio = \"C:\\\\Users\\\\HP\\\\OneDrive\\\\Documentos\\\\Big Data\\\\Big data - TP2 (1)\"\n",
     "\n",
     "# Tomo el archivo csv\n",
-    "archivo_csv = \"Base Airbnb NY.csv\"\n",
+    "url = \"https://raw.githubusercontent.com/Ninadcp/BIGDATA/main/tp2/Base%20Airbnb%20NY.csv"\n",
+     
     "\n",
     "# Construyo la ruta absoluta\n",
     "ruta_absoluta = os.path.join(directorio, archivo_csv)\n",
