--- a/tp3/Parte 1.ipynb
+++ b/tp3/Parte 1.ipynb
@@ -25,7 +25,9 @@
     }
    ],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
+    "\n",
     "\n",
     "# Cargar la base de datos\n",
     "df = pd.read_excel('usu_individual_T423.xls')\n",
