--- a/tp3/Parte 1.ipynb
+++ b/tp3/Parte 1.ipynb
@@ -2,64 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c4916d36-e3ea-4bf9-b2ee-c81dc5584f51",
+   "execution_count": 8,
+   "id": "0fd13550-fd6f-4a9a-af5c-c90288e8cdfa",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'nombre_aglomerado'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'nombre_aglomerado'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_excel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124musu_individual_T423.xlsx\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Filtrar las observaciones que corresponden a Ciudad Autónoma de Buenos Aires o Gran Buenos Aires\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m df \u001b[38;5;241m=\u001b[39m df[(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnombre_aglomerado\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCiudad Autónoma de Buenos Aires\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m|\u001b[39m (df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnombre_aglomerado\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGran Buenos Aires\u001b[39m\u001b[38;5;124m'\u001b[39m)]\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Guardar los datos filtrados en un nuevo archivo Excel\u001b[39;00m\n\u001b[1;32m     14\u001b[0m df\u001b[38;5;241m.\u001b[39mto_excel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatos_filtrados.xls\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[1;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'nombre_aglomerado'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: requests in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (2.31.0)\n",
+      "Requirement already satisfied: pandas in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (1.5.3)\n",
+      "Requirement already satisfied: openpyxl in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (3.0.10)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from requests) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from requests) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from requests) (2023.7.22)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from pandas) (2023.3.post1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from pandas) (1.24.3)\n",
+      "Requirement already satisfied: et_xmlfile in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from openpyxl) (1.1.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/ninadicostanzopereira/anaconda3/lib/python3.11/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
+    "pip install requests pandas openpyxl\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4ef6d23d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          CODUSU  ANO4  TRIMESTRE  NRO_HOGAR  COMPONENTE  H15  \\\n",
+      "0  TQRMNOSUWHLMKQCDEFNFF00852219  2023          4          1           1    1   \n",
+      "1  TQRMNOSUWHLMKQCDEFNFF00852219  2023          4          1           2    1   \n",
+      "2  TQRMNOTXQHKOLMCDEGNFJ00794590  2023          4          1           1    1   \n",
+      "3  TQRMNOTXQHKOLMCDEGNFJ00794590  2023          4          1           2    1   \n",
+      "4  TQRMNOTXQHKOLMCDEGNFJ00794590  2023          4          1           3    0   \n",
+      "\n",
+      "   REGION MAS_500  AGLOMERADO  PONDERA  ...  PDECIFR  ADECIFR       IPCF  \\\n",
+      "0      41       N           7      370  ...     12.0       12       0.00   \n",
+      "1      41       N           7      370  ...     12.0       12       0.00   \n",
+      "2      44       N          17      281  ...      9.0        7  216666.67   \n",
+      "3      44       N          17      281  ...      9.0        7  216666.67   \n",
+      "4      44       N          17      281  ...      9.0        7  216666.67   \n",
+      "\n",
+      "   DECCFR  IDECCFR  RDECCFR  GDECCFR  PDECCFR  ADECCFR  PONDIH  \n",
+      "0      12     12.0       12      NaN     12.0       12       0  \n",
+      "1      12     12.0       12      NaN     12.0       12       0  \n",
+      "2       8      8.0        7      NaN      8.0        6     387  \n",
+      "3       8      8.0        7      NaN      8.0        6     387  \n",
+      "4       8      8.0        7      NaN      8.0        6     387  \n",
+      "\n",
+      "[5 rows x 177 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "#Seteamos el directorio en el que vamos a trabajar\n",
-    "directorio = '/Users/juanimorozumi/Documents/GitHub/BIGDATA/tp3'\n",
+    "# URL del archivo Excel en GitHub\n",
+    "url = 'https://github.com/Ninadcp/BIGDATA/raw/29365bf058de109fcd696c339c3caad132e0f592/tp3/usu_individual_T423.xlsx'\n",
     "\n",
-    "# Cargar la base de datos\n",
-    "df = pd.read_excel('usu_individual_T423.xlsx')\n",
+    "# Descargar el archivo Excel\n",
+    "response = requests.get(url)\n",
+    "file_path = 'usu_individual_T423.xlsx'\n",
     "\n",
-    "# Filtrar las observaciones que corresponden a Ciudad Autónoma de Buenos Aires o Gran Buenos Aires\n",
-    "df = df[(df['nombre_aglomerado'] == 'Ciudad Autónoma de Buenos Aires') | (df['nombre_aglomerado'] == 'Gran Buenos Aires')]\n",
+    "# Guardar el archivo Excel en el disco\n",
+    "with open(file_path, 'wb') as file:\n",
+    "    file.write(response.content)\n",
+    "\n",
+    "# Leer el archivo Excel usando pandas\n",
+    "df = pd.read_excel(file_path)\n",
+    "\n",
+    "# Mostrar las primeras filas del DataFrame para verificar\n",
+    "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e6c81e46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            CODUSU  ANO4  TRIMESTRE  NRO_HOGAR  COMPONENTE  \\\n",
+      "109  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           1   \n",
+      "110  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           2   \n",
+      "111  TQRMNOPUUHJKLQCDEIIAD00793187  2023          4          1           1   \n",
+      "112  TQRMNOPUUHJKLQCDEIIAD00793187  2023          4          1           2   \n",
+      "113  TQRMNOPUTHKLMNCDEIIAD00791268  2023          4          1           1   \n",
+      "\n",
+      "     H15  REGION MAS_500  AGLOMERADO  PONDERA  ...  PDECIFR  ADECIFR  \\\n",
+      "109    1       1       S          32     1775  ...      NaN        5   \n",
+      "110    1       1       S          32     1775  ...      NaN        5   \n",
+      "111    2       1       S          32      609  ...      NaN       12   \n",
+      "112    1       1       S          32      609  ...      NaN       12   \n",
+      "113    1       1       S          32     3129  ...      NaN        8   \n",
+      "\n",
+      "          IPCF  DECCFR  IDECCFR  RDECCFR  GDECCFR  PDECCFR  ADECCFR  PONDIH  \n",
+      "109  225000.00       8      NaN        8      8.0      NaN        5    3079  \n",
+      "110  225000.00       8      NaN        8      8.0      NaN        5    3079  \n",
+      "111       0.00      12      NaN       12     12.0      NaN       12       0  \n",
+      "112       0.00      12      NaN       12     12.0      NaN       12       0  \n",
+      "113  266666.67       9      NaN        8      8.0      NaN        6    4648  \n",
+      "\n",
+      "[5 rows x 177 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Filtrar las observaciones que corresponden a Ciudad Autónoma de Buenos Aires o Gran Buenos Aires, es decir me quiero quedar con AGLOMERADO==32(Ciudad de Buenos Aires) y AGLOMERADO== 33 (Partidos del GBA)\n",
+    "df_filtered = df[(df['AGLOMERADO'] == 32) | (df['AGLOMERADO'] == 33)]\n",
     "\n",
     "# Guardar los datos filtrados en un nuevo archivo Excel\n",
-    "df.to_excel('datos_filtrados.xls', index=False)\n",
+    "df_filtered.to_excel('datos_filtrados.xlsx', index=False)\n",
     "\n",
-    "# Confirmar que se han eliminado las observaciones no deseadas\n",
-    "print(\"Observaciones después de filtrar:\", len(df))"
+    "print(df_filtered.head())\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d37780-1c08-4ccc-9b6c-6c4d284af800",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fd13550-fd6f-4a9a-af5c-c90288e8cdfa",
+   "id": "efbe6396",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -81,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
