Update Parte 1 continuación.ipynb

--- a/tp3/Parte 1 continuación.ipynb
+++ b/tp3/Parte 1 continuación.ipynb
@@ -129,8 +129,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "40b930c2-4e6b-470c-93d9-35345014e9eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de desocupados: 226\n",
+      "Número de inactivos: 2507\n",
+      "ESTADO\n",
+      "0         0.000000\n",
+      "1    190809.678283\n",
+      "2     61605.874425\n",
+      "3     93740.533139\n",
+      "4     75891.491137\n",
+      "Name: IPCF, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (e) Desocupados e inactivos \n",
+    "# Contar el número de desocupados e inactivos\n",
+    "# Asumiendo que la variable de estado ocupacional se llama 'ESTADO', donde:\n",
+    "# 1 representa ocupados\n",
+    "# 2 representa desocupados\n",
+    "# 3 representa inactivos\n",
+    "\n",
+    "num_desocupados = data[data['ESTADO'] == 2].shape[0]\n",
+    "num_inactivos = data[data['ESTADO'] == 3].shape[0]\n",
+    "\n",
+    "print(f'Número de desocupados: {num_desocupados}')\n",
+    "print(f'Número de inactivos: {num_inactivos}')\n",
+    "\n",
+    "# Calcular la media de IPCF según estado ocupacional\n",
+    "# Asumiendo que la variable de ingreso per cápita familiar se llama 'IPCF'\n",
+    "mean_ipcf_by_estado = data.groupby('ESTADO')['IPCF'].mean()\n",
+    "\n",
+    "print(mean_ipcf_by_estado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf31ac94-278b-4e9a-b8cf-2f0d54890181",
    "metadata": {},
    "outputs": [],
    "source": []
