--- a/tp3/Parte 1 continuación.ipynb
+++ b/tp3/Parte 1 continuación.ipynb
@@ -187,147 +187,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 17,
    "id": "c734b410-0ef5-433d-914c-bb464085e351",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Edad  Mujeres  Varones\n",
-      "0   <1     0.35     0.35\n",
-      "1    1     0.37     0.37\n",
-      "2    2     0.46     0.46\n",
-      "3    3     0.51     0.51\n",
-      "4    4     0.55     0.55\n",
-      "Index(['Edad', 'Mujeres', 'Varones'], dtype='object')\n",
-      "Columnas en data: Index(['CODUSU', 'ANO4', 'TRIMESTRE', 'NRO_HOGAR', 'COMPONENTE', 'H15',\n",
-      "       'REGION', 'MAS_500', 'AGLOMERADO', 'PONDERA',\n",
-      "       ...\n",
-      "       'PDECIFR', 'ADECIFR', 'IPCF', 'DECCFR', 'IDECCFR', 'RDECCFR', 'GDECCFR',\n",
-      "       'PDECCFR', 'ADECCFR', 'PONDIH'],\n",
-      "      dtype='object', length=177)\n",
-      "Columnas en adulto_equiv: Index(['Edad', 'Mujeres', 'Varones'], dtype='object')\n",
-      "Faltan columnas en 'data': ['Edad', 'Varones', 'Mujeres']\n",
-      "Faltan columnas en 'adulto_equiv': []\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'Varones'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/pv/088xlq6n437b0m1bfcy9zv840000gn/T/ipykernel_68203/111760303.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'CH06'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Edad'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;31m# Agregar la columna de adulto equivalente a la base de datos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madulto_equiv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'left'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Edad'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Varones'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;31m# Verificar las primeras filas después de la combinación\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m  10089\u001b[0m         \u001b[0mvalidate\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10090\u001b[0m     ) -> DataFrame:\n\u001b[1;32m  10091\u001b[0m         \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmerge\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10092\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m> 10093\u001b[0;31m         return merge(\n\u001b[0m\u001b[1;32m  10094\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10095\u001b[0m             \u001b[0mright\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m  10096\u001b[0m             \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[0mcopy\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m     \u001b[0mindicator\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m     \u001b[0mvalidate\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m ) -> DataFrame:\n\u001b[0;32m--> 110\u001b[0;31m     op = _MergeOperation(\n\u001b[0m\u001b[1;32m    111\u001b[0m         \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0mright\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m         \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, left, right, how, on, left_on, right_on, axis, left_index, right_index, sort, suffixes, indicator, validate)\u001b[0m\n\u001b[1;32m    699\u001b[0m         (\n\u001b[1;32m    700\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mleft_join_keys\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    701\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mright_join_keys\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 703\u001b[0;31m         ) = self._get_merge_keys()\n\u001b[0m\u001b[1;32m    704\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    705\u001b[0m         \u001b[0;31m# validate the merge keys dtypes. We may need to coerce\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    706\u001b[0m         \u001b[0;31m# to avoid incompatible dtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mlk\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m                         \u001b[0;31m# Then we're either Hashable or a wrong-length arraylike,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1177\u001b[0m                         \u001b[0;31m#  the latter of which will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1178\u001b[0m                         \u001b[0mlk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mHashable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1179\u001b[0;31m                         \u001b[0mleft_keys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_label_or_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1180\u001b[0m                         \u001b[0mjoin_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1181\u001b[0m                     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1182\u001b[0m                         \u001b[0;31m# work-around for merge_asof(left_index=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1846\u001b[0m                 \u001b[0;34m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[assignment]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1847\u001b[0m                 \u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1848\u001b[0m             )\n\u001b[1;32m   1849\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1850\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1851\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1852\u001b[0m         \u001b[0;31m# Check for duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1853\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Varones'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (f) \n",
     "import pandas as pd\n",
     "\n",
     "# Especifica las rutas de los archivos\n",
-    "file_path_eph = '/Users/juanimorozumi/Documents/GitHub/BIGDATA/tp3/datos_filtrados.xlsx'  \n",
-    "file_path_adulto_equiv = '/Users/juanimorozumi/Desktop/Big data/Tutoriales /Big data - TP3/tabla_adulto_equiv.xlsx' \n",
+    "file_path_eph = '//Users/ninadicostanzopereira/Desktop/BIGDATA/tp3/datos_filtrados.xlsx'  \n",
+    "file_path_adulto_equiv = '/Users/ninadicostanzopereira/Desktop/BIGDATA/tp3/tabla_adulto_equiv.xlsx' \n",
     "\n",
     "# Cargar los datos\n",
     "data = pd.read_excel(file_path_eph)\n",
     "adulto_equiv = pd.read_excel(file_path_adulto_equiv, skiprows=3, usecols='A:C', nrows=27)\n",
-    "# Muestra las primeras filas del dataframe para verificar que se cargó correctamente\n",
-    "print(adulto_equiv.head())\n",
     "\n",
-    "# Verificar los nombres de las columnas en el archivo tabla adulto equiv.xlsx\n",
-    "print(adulto_equiv.columns)\n",
     "\n",
-    "#Nombre de las nuevas columnas \n",
-    "nuevos_nombres = ['Edad', 'Mujeres', 'Varones']\n",
+    "#limpiamos la base de equiv para usarla\n",
+    "\n",
+    "def limpiar_edad(edad):\n",
+    "    '''\n",
+    "    edad es un string que tiene edad y más datos así que queremos que devuelva solo la edad en número\n",
+    "    '''\n",
+    "    if 'más de' in edad:\n",
+    "        edad = 75\n",
     "        \n",
-    "# Renombrar las columnas del archivo de adulto equivalente si es necesario\n",
-    "adulto_equiv.columns = nuevos_nombres\n",
+    "    elif 'Menor de' in edad:\n",
+    "        edad = 0\n",
+    "        \n",
+    "    elif 'a ' in edad:\n",
+    "        edad = int(edad.split(' ')[0])\n",
+    "        \n",
+    "    elif len(edad.split(' ')) == 1:\n",
+    "            edad = int(edad[0:1])\n",
+    "    else:\n",
+    "        edad = int(edad.split(' ')[0])\n",
+    "        \n",
+    "    return edad\n",
+    "#sacamos las filas vacías es decir deja las filas que tienen datos no nulos\n",
+    "adulto_equiv = adulto_equiv.dropna()\n",
     "\n",
-    "# Mostrar los nombres de las columnas de ambos DataFrames\n",
-    "print(\"Columnas en data:\", data.columns)\n",
-    "print(\"Columnas en adulto_equiv:\", adulto_equiv.columns)\n",
+    "#aplicamos la función que definimos antes:\n",
+    "adulto_equiv['Edad'] = adulto_equiv['Edad'].apply(limpiar_edad)\n",
     "\n",
-    "# Reemplazar '<1' en la columna 'Edad' de adulto_equiv por 0 (o cualquier otro valor adecuado)\n",
-    "adulto_equiv['Edad'] = adulto_equiv['Edad'].replace('<1', 0)\n",
+    "#quiero agregar filas con todas las edades ahsta 99 años para simplificar después el código\n",
     "\n",
-    "# Función para convertir rangos de edad a valores numéricos\n",
-    "def convertir_edad(valor):\n",
-    "    if isinstance(valor, str):\n",
-    "        if '-' in valor:\n",
-    "            # Tomar el valor medio del rango\n",
-    "            inicio, fin = map(int, valor.split('-'))\n",
-    "            return (inicio + fin) // 2\n",
-    "        elif valor.startswith('[') and valor.endswith(']'):\n",
-    "            # Convertir valores como '[18,29]' a la media del rango\n",
-    "            valor = valor.strip('[]')\n",
-    "            inicio, fin = map(int, valor.split(','))\n",
-    "            return (inicio + fin) // 2\n",
-    "        else:\n",
-    "            # Otros valores no numéricos\n",
-    "            try:\n",
-    "                return int(valor)\n",
-    "            except ValueError:\n",
-    "                return None\n",
-    "    return valor\n",
+    "#miro que edades ya tengo \n",
+    "edades_existentes = adulto_equiv['Edad'].unique()\n",
     "\n",
-    "# Aplicar la función a la columna 'Edad'\n",
-    "adulto_equiv['Edad'] = adulto_equiv['Edad'].map(convertir_edad)\n",
+    "# hago una lista con edades existentes es decir hasta los 99 años\n",
+    "todas_las_edades = pd.DataFrame({'Edad': range(100)})\n",
     "\n",
-    "# Convertir la columna 'Edad' a numérico, convirtiendo errores a NaN\n",
-    "adulto_equiv['Edad'] = pd.to_numeric(adulto_equiv['Edad'], errors='coerce')\n",
+    "# Fusionar el DataFrame con todas las edades con el DataFrame original\n",
+    "adulto_equiv = pd.merge(todas_las_edades, adulto_equiv, on='Edad', how='left')\n",
     "\n",
-    "# Aquí rellenamos con 0 como ejemplo\n",
-    "adulto_equiv['Edad'] = adulto_equiv['Edad'].fillna(0).astype(int)\n",
-    "\n",
-    "# Convertir las edades en la tabla de adulto equivalente a un tipo compatible si es necesario\n",
-    "adulto_equiv['Edad'] = adulto_equiv['Edad'].astype(int)\n",
-    "\n",
-    "# Convertir las edades en la tabla de datos principales a un tipo compatible si es necesario\n",
-    "data['CH06'] = data['CH06'].astype(int)\n",
-    "\n",
-    "# Convertir la columna 'SEXO' a string si es necesario para asegurar la combinación\n",
-    "data['CH04'] = data['CH04'].astype(str)\n",
-    "adulto_equiv['Edad'] = adulto_equiv['Edad'].astype(str)\n",
-    "\n",
-    "# Verificar que todas las columnas necesarias existan en ambos DataFrames\n",
-    "required_columns = ['Edad', 'Varones', 'Mujeres']\n",
-    "if all(col in data.columns for col in required_columns) and all(col in adulto_equiv.columns for col in required_columns):\n",
-    "    # Agregar la columna de adulto equivalente a la base de datos\n",
-    "    data = data.merge(adulto_equiv, how='left', on=['Edad', 'Varones', 'Mujeres'])\n",
-    "    # Verificar las primeras filas después de la combinación\n",
-    "    print(data.head())\n",
-    "else:\n",
-    "    missing_cols_data = [col for col in required_columns if col not in data.columns]\n",
-    "    missing_cols_adulto_equiv = [col for col in required_columns if col not in adulto_equiv.columns]\n",
-    "    print(\"Faltan columnas en 'data':\", missing_cols_data)\n",
-    "    print(\"Faltan columnas en 'adulto_equiv':\", missing_cols_adulto_equiv)\n",
-    "\n",
-    "# Renombrar la columna 'CH06' a 'Edad' en el DataFrame `data`\n",
-    "data = data.rename(columns={'CH06': 'Edad'})\n",
+    "# Rellenar las filas faltantes copiando los valores de la fila anterior\n",
+    "adulto_equiv.fillna(method='ffill', inplace=True)\n",
     "\n",
     "\n",
-    "# Agregar la columna de adulto equivalente a la base de datos\n",
-    "data = data.merge(adulto_equiv, how='left', on=['Edad', 'Varones'])\n",
+    "def calcular_equivalente_adulto(fila):\n",
+    "    '''\n",
+    "    fila es una fila del DF para la que quiero calcular el equivalente\n",
+    "    '''\n",
+    "    #CH04 es la columna del sexo donde 1 corresponde a varón y 2 a mujer\n",
+    "    #CH04 es la columna de la edad\n",
+    "    if fila['CH04'] == '2':\n",
+    "        return equivalente_adulto['Mujeres'].get(fila['CH06'], None)\n",
+    "    elif fila['CH04'] == '1': #1 es equivalente a varón\n",
+    "        return equivalente_adulto['Varones'].get(fila['CH06'], None)\n",
+    "   \n",
     "\n",
-    "# Verificar las primeras filas después de la combinación\n",
-    "print(data.head())\n",
-    "\n",
-    "# Suponiendo que la variable que identifica a cada hogar se llama 'HOGAR'\n",
-    "# Sumar la columna de adulto equivalente para las personas que pertenecen a un mismo hogar\n",
-    "data['ad_equiv_hogar'] = data.groupby('HOGAR')['ADULTO_EQUIV'].transform('sum')\n",
-    "\n",
-    "# Verificar las primeras filas después de agregar la nueva columna\n",
-    "print(data.head())"
+    "data['equivalente_adulto'] = data.apply(calcular_equivalente_adulto, axis=1)\n"
    ]
   },
   {
@@ -461,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
