--- a/tp3/Parte 1 continuación.ipynb
+++ b/tp3/Parte 1 continuación.ipynb
@@ -187,12 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "c734b410-0ef5-433d-914c-bb464085e351",
+   "execution_count": 29,
+   "id": "da3f19d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (f) \n",
+    "\n",
+    "#limpiamos la base de equiv para usarla\n",
     "import pandas as pd\n",
     "\n",
     "# Especifica las rutas de los archivos\n",
@@ -203,8 +204,6 @@
     "data = pd.read_excel(file_path_eph)\n",
     "adulto_equiv = pd.read_excel(file_path_adulto_equiv, skiprows=3, usecols='A:C', nrows=27)\n",
     "\n",
-    "\n",
-    "#limpiamos la base de equiv para usarla\n",
     "\n",
     "def limpiar_edad(edad):\n",
     "    '''\n",
@@ -245,20 +244,126 @@
     "# Rellenar las filas faltantes copiando los valores de la fila anterior\n",
     "adulto_equiv.fillna(method='ffill', inplace=True)\n",
     "\n",
+    "# Guardamos el DataFrame como archivo Excel\n",
+    "adulto_equiv.to_excel('tabla_final.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c734b410-0ef5-433d-914c-bb464085e351",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivos cargados correctamente.\n",
+      "Primeras filas del DataFrame de personas:\n",
+      "                          CODUSU  ANO4  TRIMESTRE  NRO_HOGAR  COMPONENTE  H15  \\\n",
+      "0  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           1    1   \n",
+      "1  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           2    1   \n",
+      "2  TQRMNOPUUHJKLQCDEIIAD00793187  2023          4          1           1    2   \n",
+      "3  TQRMNOPUUHJKLQCDEIIAD00793187  2023          4          1           2    1   \n",
+      "4  TQRMNOPUTHKLMNCDEIIAD00791268  2023          4          1           1    1   \n",
+      "\n",
+      "   REGION MAS_500  AGLOMERADO  PONDERA  ...  PDECIFR  ADECIFR       IPCF  \\\n",
+      "0       1       S          32     1775  ...      NaN        5  225000.00   \n",
+      "1       1       S          32     1775  ...      NaN        5  225000.00   \n",
+      "2       1       S          32      609  ...      NaN       12       0.00   \n",
+      "3       1       S          32      609  ...      NaN       12       0.00   \n",
+      "4       1       S          32     3129  ...      NaN        8  266666.67   \n",
+      "\n",
+      "   DECCFR  IDECCFR  RDECCFR  GDECCFR  PDECCFR  ADECCFR  PONDIH  \n",
+      "0       8      NaN        8        8      NaN        5    3079  \n",
+      "1       8      NaN        8        8      NaN        5    3079  \n",
+      "2      12      NaN       12       12      NaN       12       0  \n",
+      "3      12      NaN       12       12      NaN       12       0  \n",
+      "4       9      NaN        8        8      NaN        6    4648  \n",
+      "\n",
+      "[5 rows x 177 columns]\n",
+      "Primeras filas del DataFrame de energía:\n",
+      "   Edad  Mujeres  Varones\n",
+      "0     0     0.35     0.35\n",
+      "1     1     0.37     0.37\n",
+      "2     2     0.46     0.46\n",
+      "3     3     0.51     0.51\n",
+      "4     4     0.55     0.55\n",
+      "Guardado en /Users/ninadicostanzopereira/Desktop/BIGDATA/tp3/data_energía.xlsx\n",
+      "Primeras filas del DataFrame resultante:\n",
+      "                          CODUSU  ANO4  TRIMESTRE  NRO_HOGAR  COMPONENTE  H15  \\\n",
+      "0  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           1    1   \n",
+      "1  TQRMNOTUUHJMLPCDEIIAD00801670  2023          4          1           2    1   \n",
+      "2  TQRMNOPUUHJKLQCDEIIAD00793187  2023          4          1           1    2   \n",
+      "3  TQRMNOPUUHJKLQCDEIIAD00793187  2023          4          1           2    1   \n",
+      "4  TQRMNOPUTHKLMNCDEIIAD00791268  2023          4          1           1    1   \n",
+      "\n",
+      "   REGION MAS_500  AGLOMERADO  PONDERA  ...  ADECIFR       IPCF DECCFR  \\\n",
+      "0       1       S          32     1775  ...        5  225000.00      8   \n",
+      "1       1       S          32     1775  ...        5  225000.00      8   \n",
+      "2       1       S          32      609  ...       12       0.00     12   \n",
+      "3       1       S          32      609  ...       12       0.00     12   \n",
+      "4       1       S          32     3129  ...        8  266666.67      9   \n",
+      "\n",
+      "   IDECCFR  RDECCFR  GDECCFR  PDECCFR  ADECCFR  PONDIH  adulto_equiv  \n",
+      "0      NaN        8        8      NaN        5    3079          0.74  \n",
+      "1      NaN        8        8      NaN        5    3079          0.63  \n",
+      "2      NaN       12       12      NaN       12       0          0.83  \n",
+      "3      NaN       12       12      NaN       12       0          0.67  \n",
+      "4      NaN        8        8      NaN        6    4648          0.76  \n",
+      "\n",
+      "[5 rows x 178 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (f) import os\n",
+    "import pandas as pd\n",
     "\n",
-    "def calcular_equivalente_adulto(fila):\n",
-    "    '''\n",
-    "    fila es una fila del DF para la que quiero calcular el equivalente\n",
-    "    '''\n",
-    "    #CH04 es la columna del sexo donde 1 corresponde a varón y 2 a mujer\n",
-    "    #CH04 es la columna de la edad\n",
-    "    if fila['CH04'] == '2':\n",
-    "        return equivalente_adulto['Mujeres'].get(fila['CH06'], None)\n",
-    "    elif fila['CH04'] == '1': #1 es equivalente a varón\n",
-    "        return equivalente_adulto['Varones'].get(fila['CH06'], None)\n",
-    "   \n",
     "\n",
-    "data['equivalente_adulto'] = data.apply(calcular_equivalente_adulto, axis=1)\n"
+    "# Definir la ruta del archivo\n",
+    "file_path_personas = '/Users/ninadicostanzopereira/Desktop/BIGDATA/tp3/datos_filtrados.xlsx'\n",
+    "file_path_energia = '/Users/ninadicostanzopereira/Desktop/BIGDATA/tp3/tabla_final.xlsx'\n",
+    "\n",
+    "try:\n",
+    "    # Cargar las tablas desde archivos de Excel\n",
+    "    personas_df = pd.read_excel(file_path_personas, engine='openpyxl')\n",
+    "    energia_df = pd.read_excel(file_path_energia, engine='openpyxl')\n",
+    "    print(\"Archivos cargados correctamente.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al cargar los archivos: {e}\")\n",
+    "\n",
+    "# Verificar la carga correcta mostrando las primeras filas de los DataFrames\n",
+    "print(\"Primeras filas del DataFrame de personas:\")\n",
+    "print(personas_df.head())\n",
+    "print(\"Primeras filas del DataFrame de energía:\")\n",
+    "print(energia_df.head())\n",
+    "\n",
+    "# Unir las tablas por la columna 'CH06' en personas_df y 'Edad' en energia_df\n",
+    "result_df = pd.merge(personas_df, energia_df, left_on='CH06', right_on='Edad', how='left')\n",
+    "\n",
+    "# Asignar el gasto de energía correspondiente\n",
+    "def asignar_energia(row):\n",
+    "    if row['CH04'] == 1:  # Si es hombre\n",
+    "        return row['Varones']\n",
+    "    elif row['CH04'] == 2:  # Si es mujer\n",
+    "        return row['Mujeres']\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "result_df['adulto_equiv'] = result_df.apply(asignar_energia, axis=1)\n",
+    "\n",
+    "# Eliminamos las columnas\n",
+    "result_df = result_df.drop(columns=['Varones', 'Mujeres', 'Edad'])\n",
+    "\n",
+    "# Guardar el resultado en un nuevo archivo de Excel\n",
+    "output_file_path = '/Users/ninadicostanzopereira/Desktop/BIGDATA/tp3/data_energía.xlsx'\n",
+    "print(f\"Guardado en {output_file_path}\")\n",
+    "result_df.to_excel(output_file_path, index=False, engine='openpyxl')\n",
+    "\n",
+    "# Mostramos las primeras filas del DataFrame con la nueva columna\n",
+    "print(\"Primeras filas del DataFrame:\")\n",
+    "print(result_df.head())\n"
    ]
   },
   {
